--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,22 @@
-*.iml
-*.class
-*.DS_Store
+#*.iml
+#*.class
+#*.DS_Store
 #.idea
-targetText
-com
-target
-*/target
-*/*/target
-out
+#targetText
+#com
+#target
+#*/target
+#*/*/target
+#out
 
 # Mobile Tools for Java (J2ME)
-.mtj.tmp/
+#.mtj.tmp/
 
 # Package Files #
-*.jar
-*.war
-*.ear
-*.zip
+#*.jar
+#*.war
+#*.ear
+#*.zip
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+#hs_err_pid*
